--- a/b/br/bri/brivo.com.html
+++ b/b/br/bri/brivo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the brivo.com privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211182226id_/http%3A//brivo.com/legal/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brivo.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601102331id_/http%3A//brivo.com/legal/privacy.jsp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Brivo</title>
@@ -71,7 +71,7 @@ function rollOut(on,off) {
 <td width="65"><a href="../index.jsp" onmouseover="rollOver(n1,nav1On)" onmouseout="rollOut(n1,nav1Off)"><img src="../images/m_nav1_off.gif" name="n1" width="65" height="77" border="0" alt="Home"></a></td>
 <td width="98"><a href="../about/" onmouseover="rollOver(n2,nav2On)" onmouseout="rollOut(n2,nav2Off)"><img src="../images/m_nav2_off.gif" name="n2" width="98" height="77" border="0" alt="About Brivo"></a></td>
 <td width="194"><a href="../acs/" onmouseover="rollOver(n3,nav3On)" onmouseout="rollOut(n3,nav3Off)"><img src="../images/m_nav3_off.gif" name="n3" width="194" height="77" border="0" alt="Brivo ACS"></a></td>
-<td width="135"><a href="../platform/" onmouseover="rollOver(n4,nav4On)" onmouseout="rollOut(n4,nav4Off)"><img src="../images/m_nav4_off.gif" name="n4" width="135" height="77" border="0" alt="The Brivo Platform"></a></td>
+<td width="95"><a href="../sales/" onmouseover="rollOver(n4,nav4On)" onmouseout="rollOut(n4,nav4Off)"><img src="../images/m_nav4_off.gif" name="n4" width="95" height="77" border="0" alt="The Brivo Platform"></a></td>
 <td width="94"><a href="../contact/" onmouseover="rollOver(n5,nav5On)" onmouseout="rollOut(n5,nav5Off)"><img src="../images/m_nav5_off.gif" name="n5" width="94" height="77" border="0" alt="Contact Us"></a></td>
 <td width="92"><a href="../extranet/" onmouseover="rollOver(n6,nav6On)" onmouseout="rollOut(n6,nav6Off)"><img src="../images/m_nav6_off.gif" name="n6" width="92" height="77" border="0" alt="Dealers"></a></td>
 </tr>
@@ -106,47 +106,134 @@ function rollOut(on,off) {
 <tbody><tr>
 <td>
 
-<p><img src="../images/m_head_privacy.gif" width="357" height="32" alt="Brivo and Your Privacy"></p>
+<p><img src="../images/m_head_privacy.gif" width="400" height="32" alt="Privacy and Security Policy"></p>
 
-<p>At Brivo™, we are firmly committed to safeguarding your privacy.</p>
+<p>At Brivo Systems, privacy and security are core elements of our service.
+Accordingly, we are always conscious and respectful of the privacy and
+confidentiality of your business and personal information.  When you access
+our website as a visitor, we want you to know that your Personal
+Information (name, address, phone number and email address) is safe.  When
+you access our website as a Brivo® Access Control System (ACS)
+customer, your Personal and Business Information (product identification
+information, internet access information such as web browser, connection
+speed, domain and IP address, user access data, etc.) is safe and
+confidential.  This Privacy and Security Statement will answer your
+questions about the kind of information we collect in order to properly
+serve you, how we use that information and how it is protected.</p>
 
-<p><b>What information do we collect?</b><br>
-We may ask for information about you when you create a username and password or
-when you sign-up for Brivo services. In order to provide you the product and
-service you are requesting we will need certain information - such as name,
-email, phone number, address, and credit card number. We may also use that
-information to update you on company news and additional Brivo products and
-services. You can choose not to receive such information at the time you register
-with Brivo.</p>
+<p>If you have questions or comments about Brivo's Privacy and Security
+Statement, please feel free to contact us at <nobr><a href="mailto:privacy@brivo.com">privacy@brivo.com</a>.</nobr></p>
 
-<p>Brivo may use cookies or other technologies to provide you a better and more
-personalized service.  Specifically, we use these technologies to estimate
-audience size, visitor patterns in the aggregate, and to monitor overall site
-usage.</p>
+<p><b><u>What Information is Collected and How Will it Be Used?</u></b></p>
 
-<p><b>What will happen to customer information?</b><br>
-We will not sell, trade, or rent your personal information to any third party,
-unless approved or requested by you or if we believe that we are legally required
-to do so. However, we may share aggregated, non-personal information about the
-use of Brivo services with our partners, and under confidentiality agreements we
-may match user information with third-party data.</p>
+<p>For visitors, Brivo collects only the Personal Information necessary to
+enable us to respond to your requests for our products and services.  When
+you visit our website, you may be asked to identify your product needs or
+the business category of your company, as well as your e-mail address,
+company name, business address and phone number in order to respond to your
+information requests.</p>
 
-<p><b>How do we protect customer information?</b><br>
-Data transmitted from your computer to Brivo is encrypted, so sensitive
-information such as credit card numbers and Keycodes are secure. Like many
-web sites, data stored at Brivo is securely located behind a firewall.</p>
+<p>For our customers, we collect only the information that is needed to
+properly serve you and administer our business.  This will include Personal
+and Business Information.  You will be asked to complete a product
+registration form for the Brivo ACS system, enter user access data and
+provide information necessary for billing.</p>
 
-<p><b>How can you be removed from our customer list?</b><br>
-If you would like to removed from our customer list, please email us at <a href="mailto:privacy@brivo.com">privacy@brivo.com</a>.</p>
+<p><b>Passive Collection of Information</b><br>
 
-<p><b>Send us your comments!</b><br>
-If you have any comments, suggestions, or complaints in regards to our privacy
-statement, please email us at <a href="mailto:privacy@brivo.com">
-privacy@brivo.com</a>.</p>
+Our Web server automatically recognizes your domain name, but not your
+e-mail address. As stated above, we do not collect nonpublic personal
+information from visitors to our sites unless you expressly provide it to
+us. The information we do collect from our Web sites (such as domain name,
+number of hits, pages visited and length of user session) may be combined
+to analyze how our Web sites are used. This information is then used to
+improve the usefulness of the sites.</p>
 
-<p><b>Privacy Policy Changes</b><br>
-This policy was created on June 19, 2000. Changes were most recently made on
-October 3, 2000.</p>
+<p><b>Cookies</b><br>
+
+Like most Web sites, the Brivo ACS online interface uses cookies —
+small files written to your browser's memory — to preserve session
+information and to record browser characteristics. Cookies are not used to
+access personal information or to monitor your actions.</p>
+
+<p><b>Brivo may also use your Personal and Business Information to:</b></p>
+
+<p>
+</p><ul>
+<li>Provide you with educational material related to our services and
+recommendations regarding security practices.</li>
+
+<li>Contact you to inform you of product and service enhancements and to
+offer Brivo-related promotions or discounts that we think may be of
+interest to you. </li>
+
+<li>Notify you of any regulatory or compliance issues that will affect your
+ACS service.</li>
+
+<li>Ask you to participate in surveys to better understand your needs in
+order to improve our products.</li>
+</ul>
+<p></p>
+
+<p><b>Third Party Products</b><br>
+
+Brivo actively forms partnerships with "best-in-class" companies and may,
+on occasion, use your contact information to let you know about special
+offers that may be of interest to you.  You may contact us at any time in
+order to change your preferences with respect to marketing contacts from
+Brivo, by e-mailing us at <nobr><a href="mailto:privacy@brivo.com">privacy@brivo.com</a>.</nobr></p>
+
+<p><b>HOWEVER,</b> at our discretion, we will disclose information IF we
+believe we are required to do so by law, believe that such disclosure is
+necessary to protect us from legal liability or believe we need to do so to
+protect someone's safety or the integrity of the site.  <b>Except as
+herein, Brivo will not disclose any security information (e.g., user access
+data) to any third parties unless directed to do so by you, or we receive
+your explicit prior permission.</b></p>
+
+<p><b><u>How Secure is Your Information?</u></b></p>
+
+<p>Brivo uses a variety of security measures to safeguard the
+confidentiality of information that it collects. Every Brivo employee is
+trained on our privacy and security procedures.  Only authorized Brivo
+employees or its representatives are permitted access to your Business
+Information.  Moreover, Brivo uses industry-standard technical safeguards
+and security measures to safeguard the confidentiality of the information
+in its possession, such as firewalls and Secure Socket Layers ("SSL"). 
+Information collected by Brivo is stored on secured servers, co-located at
+a third party's secure facilities.  Additionally, the hosting facility is
+guarded by 24 X 7 security guards, as well as card access and locked cage
+areas, and security camera surveillance.</p>
+
+<p>Except as specifically stated herein, Brivo will not access security
+information entered by you in the course of using Brivo's ACS Service
+except in the following limited circumstances:</p>
+
+<p>
+</p><ul>
+<li>To provide necessary technical support, usually at your request and
+with your permission;</li>
+
+<li>To produce regular backups, restore data from backups at your request
+or install software updates and/or upgrades.</li>
+</ul>
+<p></p>
+
+
+<p><b>Deleting or Updating Information</b><br>
+
+Brivo encourages you to contact us if you wish to delete, correct or
+update your Business Information in our systems, or if you desire to change
+your preferences with respect to marketing contacts from Brivo, by
+e-mailing us at <nobr><a href="mailto:privacy@brivo.com">privacy@brivo.com</a>.</nobr></p>
+
+<p>Brivo reserves the right to change this Privacy and Security Policy. Any
+changes to this policy will be posted to this page as soon as reasonably
+possible and will become effective immediately. Therefore, please check
+this page periodically. Use of the Brivo site constitutes consent to any
+policies then in effect.</p>
+
+<p>Revised Date: January 22, 2002.</p>
 
 
 </td>
@@ -177,7 +264,7 @@ October 3, 2000.</p>
 </tr>
 <tr valign="top">
 <td align="left">
-<p class="footer"><nobr>&nbsp;&nbsp;&nbsp; © 2001 Brivo Systems, Inc. 
+<p class="footer"><nobr>&nbsp;&nbsp;&nbsp; © 2002 Brivo Systems, Inc. 
 <a href="../legal/privacy.jsp" class="gray">Privacy Statement</a> | 
 <a href="../legal/terms.jsp" class="gray">Terms of Use</a></nobr></p>
 <p>&nbsp;</p>
