--- a/t/th/the/thermo.com.html
+++ b/t/th/the/thermo.com.html
@@ -1,8 +1,7 @@
-<!--The following is the downloaded HTML source of the thermo.com privacy policy that was archived on 2001-08-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010813143343id_/http%3A//thermo.com/eThermo/CDA/Footer/Privacy_Statement/0%2C12497%2C1-8%2C00.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thermo.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601102425id_/http%3A//www.thermo.com/eThermo/CDA/Footer/Privacy_Statement/1%2C1290%2C1-8%2C00.html) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Statement - Thermo</title>
-
 
 
 
@@ -41,6 +40,13 @@ H2 {
    color : #ffffff; 
 }
 
+.text10ptboldblue {
+	FONT-WEIGHT: bold; FONT-SIZE: 10pt; COLOR: #006699; FONT-FAMILY: Arial, Helvetica, sans-serif
+}
+
+.subhdred9pt {
+	FONT-WEIGHT: bold; FONT-SIZE: 9pt; COLOR: #cc0000; FONT-FAMILY: Arial, Helvetica, sans-serif
+}
 .text9ptbold {
    font-weight : bold; 
    font-size : 9pt; 
@@ -58,8 +64,7 @@ H2 {
 }
 
 .leftnav {
-   font-size : 8pt; 
-   font-family : Arial, Helvetica, sans-serif; 
+	ONT-WEIGHT: normal; FONT-SIZE: 8pt; FONT-FAMILY: Arial, Helvetica, sans-serif
 }
 
 .text7ptwht {
@@ -145,58 +150,47 @@ H2 {
 #ul {font-color: red;}
 
 
-</style>
-	</head><body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginheight="0" marginwidth="0">
+</style></head>
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginheight="0" marginwidth="0">
 <table width="100%" border="0" cellspacing="0" cellpadding="0" height="56">
-  <tbody><tr> 
-    <td width="1253">
-	
+ <tbody><tr>
 
-<!-- Vignette V/5 Mon Aug 13 10:32:49 2001 -->
-
-
-
-<!------------- TOP NAVIGATION TABLE STARTS HERE ------------->
-<table width="350" border="0" cellspacing="0" cellpadding="0" align="right">
-    <tbody><tr valign="middle">
-	  <td align="left"></td>
-	  <td align="right" height="60">
-    <a href="http://www.thermo.com/eThermo/CDA/Business_Unit/By_Business_Unit/1,12495,1,00.html"><img src="/CDA/Images/Navigation/btn_visthermobu.gif" border="0"></a></td>
-	</tr>
-  </tbody></table>
-
-		  <img src="/CDA/Images/Navigation/lgo_thermo.gif" width="588" height="70" border="0"></td><!-- Vignette V/5 Mon Aug 13 10:32:49 2001 -->
-<td rowspan="3" align="left" valign="bottom"><img src="/CDA/Images/Navigation/nt_rline.gif" width="23" height="108" border="0"></td>
-    </tr>
-    <tr> 
-    <td width="1253">
-        <table width="200" border="0" cellspacing="0" cellpadding="0" align="right">
-          <tbody><tr align="right"> 
-          <td class="text8pt"></td>
-        </tr>
-      </tbody></table>
-      
+<!-- Vignette V/5 Sat Jun 01 06:24:25 2002 -->
+ <!------------- TOP NAVIGATION TABLE STARTS HERE ------------->
+<td height="56">
+  <table width="100%" border="0" cellspacing="0" cellpadding="0">
+     <tbody><tr valign="middle">
+       <td valign="bottom" align="left">
+		  <img src="/CDA/Images/Navigation/lgo_thermo.gif" width="588" height="70" border="0"></td>
+	   <td align="left"></td>
+	   <td align="right" height="60">
+    <a href="http://www.thermo.com/eThermo/CDA/Business_Unit/By_Business_Unit/0,1288,1,00.html"><img src="/CDA/Images/Navigation/btn_visthermobu.gif" border="0"></a></td>
+	 </tr>
+   </tbody></table>
+ </td>
+  
+ <td rowspan="3" align="left" valign="bottom"><img src="/CDA/Images/Navigation/nt_rline.gif" width="23" height="108" border="0"></td>
+</tr>
+<tr> 
+ <td>
 		<map name="secondary">
-	    <area shape="rect" coords="6,0,43,18" href="http://www.thermo.com/eThermo/CDA/BU_Home/BU_Homepage/0,12482,1,00.html">
-		<area shape="rect" coords="48,0,113,18" href="http://www.thermo.com/eThermo/CDA/Contact_Us/Contact_Us_Home/1,12449,1,00.html">
-		<area shape="rect" coords="117,0,170,18" href="http://www.thermo.com/eThermo/CDA/Site_Map/Site_Map/1,12498,1,00.html">
-		<area shape="rect" coords="174,0,220,18" href="http://www.thermo.com/eThermo/CDA/Search/Search_Home/1,12490,1,00.html">
-		<area shape="rect" coords="224,0,289,18" href="http://www.thermo.com/eThermo/CDA/Buy_Online/Buy_Online/1,12462,1,00.html">
-		<area shape="rect" coords="292,0,337,18" href="https://www.thermo.com/eThermo/CDA/Support/Login/1,12354,1,00.html">
-		<area shape="rect" coords="341,0,408,18" href="https://www.thermo.com/eThermo/CDA/My_Account/My_Account/1,12388,1,00.html">
-		<area shape="rect" coords="415,0,492,18" href="https://www.thermo.com/eThermo/CDA/Shopping_Cart/Shopping_Cart_Page/1,12371,1,00.html">
-
-	    </map><img src="/CDA/Images/Navigation/nt_sec_buy.gif" width="512" height="18" border="0" usemap="#secondary"></td> </tr><!----------- Start Menu Specific Stuff -------------------->
+	    <area shape="rect" coords="6,0,43,18" href="http://www.thermo.com/eThermo/CDA/BU_Home/BU_Homepage/0,1285,1,00.html">
+		<area shape="rect" coords="48,0,113,18" href="http://www.thermo.com/eThermo/CDA/Contact_Us/Contact_Us_Home/1,1259,1,00.html">
+		<area shape="rect" coords="117,0,170,18" href="http://www.thermo.com/eThermo/CDA/Site_Map/Site_Map/0,1291,1,00.html">
+		<area shape="rect" coords="174,0,220,18" href="http://www.thermo.com/eThermo/CDA/Search/Search_Home/0,1305,1,00.html">
+		<area shape="rect" coords="224,0,289,18" href="http://www.thermo.com/eThermo/CDA/Buy_Online/Buy_Online/1,1265,1,00.html">
+		<area shape="rect" coords="292,0,337,18" href="https://www.thermo.com/eThermo/CDA/Support/Login/1,1145,1,00.html">
+		<area shape="rect" coords="341,0,408,18" href="https://www.thermo.com/eThermo/CDA/My_Account/My_Account/1,1194,1,00.html">
+		<area shape="rect" coords="415,0,492,18" href="https://www.thermo.com/eThermo/CDA/Shopping_Cart/Coming_Soon/1,1171,1,00.html">
+	    </map><img src="/CDA/Images/Navigation/nt_sec_buy.gif" width="512" height="18" border="0" usemap="#secondary"></td> </tr>
+<!----------- Start Menu Specific Stuff -------------------->
 
 <tr>     
 	<td>
-
-
-	<table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="1253" background="/CDA/Images/Navigation/nt_bkline.gif"><img src="/CDA/Images/Navigation/nt_prim.gif" width="588" height="19" border="0" usemap="#Map"><map name="Map"><area shape="rect" coords="4,0,61,19" href="http://www.thermo.com/eThermo/CDA/About_Us/About_Us_Home/0,12374,1,00.html"><area shape="rect" coords="65,0,153,19" href="http://www.thermo.com/eThermo/CDA/News/News_Home/1,12445,1,00.html"><area shape="rect" coords="155,0,218,19" href="http://www.thermo.com/eThermo/CDA/Investors/1,12465,tmo-2100,00.html"><area shape="rect" coords="221,0,288,19" href="http://www.thermo.com/eThermo/CDA/Industry/Industry_Home_Page/1,12422,1,00.html"><area shape="rect" coords="292,0,349,19" href="http://www.thermo.com/eThermo/CDA/Products/Product_Home_Page/1,12294,1,00.html"><area shape="rect" coords="353,0,436,19" href="http://www.thermo.com/eThermo/CDA/Technology/Technology_Home_Page/1,12411,1,00.html"><area shape="rect" coords="438,0,514,19" href="http://www.thermo.com/eThermo/CDA/Applications/Application_Home_Page/0,12406,1,00.html"><area shape="rect" coords="517,0,573,19" href="http://www.thermo.com/eThermo/CDA/Support/SupportMain/1,12361,1,00.html"></map></td></tr></tbody></table>
- </td>
+	<table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="1253" background="/CDA/Images/Navigation/nt_bkline.gif"><img src="/CDA/Images/Navigation/nt_prim.gif" width="588" height="19" border="0" usemap="#Map"><map name="Map"><area shape="rect" coords="4,0,61,19" href="http://www.thermo.com/eThermo/CDA/About_Us/About_Us_Home/0,1177,1,00.html"><area shape="rect" coords="65,0,153,19" href="http://www.thermo.com/eThermo/CDA/News/News_Home/0,1248,1,00.html"><area shape="rect" coords="155,0,218,19" href="http://www.thermo.com/eThermo/CDA/Investors/1,1269,tmo-2100,00.html"><area shape="rect" coords="221,0,288,19" href="http://www.thermo.com/eThermo/CDA/Industry/Industry_Home_Page/0,1231,1,00.html"><area shape="rect" coords="292,0,349,19" href="http://www.thermo.com/eThermo/CDA/Products/Product_Home_Page/0,1078,1,00.html"><area shape="rect" coords="353,0,436,19" href="http://www.thermo.com/eThermo/CDA/Technology/Technology_Home_Page/0,1212,1,00.html"><area shape="rect" coords="438,0,514,19" href="http://www.thermo.com/eThermo/CDA/Applications/Application_Home_Page/0,1208,1,00.html"><area shape="rect" coords="517,0,573,19" href="http://www.thermo.com/eThermo/CDA/Support/SupportMain/0,1162,1,00.html"></map></td></tr></tbody></table>
+</td>
 </tr>
 </tbody></table>
-
 <!------------- MAIN CONTENT TABLE STARTS HERE ------------->
 <table width="95%" border="0" cellspacing="0" cellpadding="0">
 
