--- a/t/to/top/topweddingsites.com.html
+++ b/t/to/top/topweddingsites.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the topweddingsites.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201155132id_/http%3A//www.topweddingsites.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the topweddingsites.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601143257id_/http%3A//topweddingsites.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/HTML; charset=iso-8859-1">
